--- a/GYMProgram/Views/Shared/_LoginPartial.cshtml
+++ b/GYMProgram/Views/Shared/_LoginPartial.cshtml
@@ -31,7 +31,7 @@
                         <div class="media">
                             <img class="d-flex align-self-center img-radius" src="~/assets/images/avatar-2.jpg" alt="Generic placeholder image">
                             <div class="media-body">
-                                <h5 class="notification-user">John Doe</h5>
+                                <h5 class="notification-user"> @User.Identity.Name</h5>
                                 <p class="notification-msg">Lorem ipsum dolor sit amet, consectetuer elit.</p>
                                 <span class="notification-time">30 minutes ago</span>
                             </div>
